Simplify NetconfOperationChainedExecution
There is only a single implementation that reports being a termination
point. Rather than having these checks, just use 'null' to indicate
there is no subsequent operation.

Change-Id: I0c46ea596aec4d18ed8afa0bd39d461a4ae64c52
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>